--- a/test.ipynb
+++ b/test.ipynb
@@ -34,8 +34,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "4f16d2de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_ = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "45dbd226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recent_update_days = dict_.pop('recent-update-days', None)\n",
+    "if dict_:\n",
+    "    print('fail')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "02152742",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4db167e5",
    "metadata": {},
    "outputs": [],
    "source": []
